
//package com.ihuizhi.network.mahjong.protobuf;

package proto.game.hunanmj;

enum E_BUZHANG
{
	BUZHANG_ZHIGANG = 2;
	BUZHANG_WANGANG = 4;
	BUZHANG_ANGANG = 8;
}
enum E_GUI
{
	LAIZI_NOJOKER = 0;
	LAIZI_COMMON_JOKER = 1;
	LAIZI_FAN_JOKER = 2;
	LAIZI_FAN_DOUBLE_JOKER = 3;
	
	LAIZI_HUA_JOKER_4 = 4;	//4花
	LAIZI_HUA_JOKER_8 = 5;	//8花
	LAIZI_HUA_JOKER_2 = 6;	//2花
	LAIZI_HUA_JOKER_6 = 7;	//6花
	CARDPOOL_LAST_CARD = 8;
}
//结算，胡牌、杠牌信息宏定义
enum HUGANG
{
	HUGANG_PENG = 1;				//碰
	HUGANG_ZHIGANG = 2;				//直杠
	HUGANG_WANGANG = 4;				//弯杠
	HUGANG_ANGANG = 8;				//暗杠
	HUGANG_HU = 16;					//胡
	HUGANG_LISTEN = 32;				//听
	HUGANG_LEFT_CHI = 64;			//左吃
    HUGANG_CENTER_CHI = 128;		//中吃
	HUGANG_RIGHT_CHI = 256;		//右吃
}

enum JiangmaType
{
	JIANGMA = 1;					//奖码
	MOJIJIANGJI = 2;				//摸几奖几
	ZHUANIAO = 3;					//抓鸡
	ZHUA_159 = 4;					//抓159
	JINNIAO = 5;					//抓鸟--金鸟
}
	
enum HunanLocation
{
	HUNAN_CHANGSHA = 1;		//长沙
	HUNAN_CHENZHOU = 2;		//郴州
	HUNAN_SHAOYANG = 3;		//邵阳
	HUNAN_CHANGDE = 4;		//常德
	HUNAN_HONGZHONG = 5;	//红中
	HUNAN_ZHUANZHUAN = 6;	//转转
}

//只需要把所有的配置整理出来，然后各个地区固定相关配置项即可


//客户端上传结构体
//癞子
message AckEnSureJoker
{
    optional int32 OpenCard = 1;				//翻癞子的牌 (如果只为255表示固定癞子)
	optional int32 CurJokerCard = 2;			//当前癞子牌
	optional int32 JokerType = 3;				//癞子类型
	optional int32 CurJokerCard2 = 4;
	optional int32 Position = 5;				//2.5D 翻癞子的位置
	optional int32 LeftCardNum = 6;				//翻癞子后，剩余牌数
	optional int32 LeftCardNum2 = 8;
}

//选择飘的数
message ReqChoosePiao
{
	optional int32 PiaoNum = 1;			//飘的大小，0表示不飘
}

//服务端下发结构体

//开始选择飘
message AckStartPiao
{
	repeated int32 piaoNum = 1;			//飘的倍数
}

//广播玩家选择的飘
message AckBroadPiao
{
	optional int32 chariid = 1;			//椅子id
	optional int32 UserPiao = 2;		//椅子id对应玩家选择的飘的倍数
}

//结算显示，杠牌信息
message tagGangHu
{
	optional int32 Type = 1;		//0表示无，64表示点杠,2表示直杠，4表示弯杠，8表示暗杠，128表示被自摸, 16点炮，32炮胡, 256表示自摸（参考HUGANG枚举）
	optional int32 Chairid = 2;		//引起杠、胡的椅子id，如果是暗杠则是自己的椅子id
	optional int32 Card = 3;		//牌
	optional int32 score = 4;		//输赢分数
}

message tagEndGangHu
{
	repeated tagGangHu GangHu = 1; 
}

//胡牌信息
message tagHu
{
	optional int32 Hucard = 1;			//胡的牌
	optional int32 pasHuchairid = 2;	//被胡玩家椅子id
}

//玩家胡牌信息
message tagUserHuInfo
{
	optional int32 HuTotalscore = 1;	//胡牌输赢总分
	repeated tagHu stHuinfo = 2;		//胡牌信息
}

//退杠信息
message ReturnGangInfo
{
	repeated int32 State	= 1;	//退杠状态，1表示退杠，2表示被退杠，0为初始值
	repeated int32 Card = 2;		//退杠的牌
	repeated int32 Returngangscore = 3; //玩家退杠分数
}

//开始抓鸡、 奖码、
//奖码，抓鸡，抓鸟 的牌
message tagJiangma
{
	required int32 Num = 1;					//奖码、抓鸡牌的个数	
	required int32 CardType = 2;			//奖码、抓鸡的类型，（奖码159，摸几奖几，抓鸡
	required int32 Chairid = 3;				//抓鸟的玩家
	repeated int32 Card = 4; 				//奖码、抓鸡的牌
	repeated int32 ZhongChairID = 5;		//中鸟的玩家	
}

message tagDaShai
{//杠牌打筛子，起手胡打筛子抓鸟		
	repeated int32 Shai = 1;					//筛子
	required int32 Chairid = 2;				//抓鸟，打筛子的玩家
	required int32 Type = 3;				//打色子类型， 0只打筛子， 1抓鸟
	repeated int32 ZhongChairID = 4;		//中鸟的玩家
	repeated int32 Score = 5;				//4个玩家输赢的分数
	optional int32 ZhongPai = 6;			//筛子打中牌，1中了，0没中
}
message tagBanInfo
{
	required int32 Chairid = 1;				//玩家椅子ID
	repeated int32 ShowCard = 2;			//玩家需要扳的牌
	repeated AddFanInfo addfan = 3;   	    //另加番信息
	
}

message tagBanPai
{//玩家起手胡后板牌，（亮牌）
	repeated tagBanInfo banpai = 1;			//玩家的板牌，有几个发几个	
}
message tagBanPaiEnd
{
	required int32 Chairid = 1;				//收起牌的玩家
}
message tagGangInfo
{
	required int32 Card = 1;			//要杠的牌
	optional int32 state = 2;		    //杠类型		
};
//杠牌后有操作提示
message GangAckOpNotify {
    required int32    ChairID 	 = 1;		//有操作提示的椅子id
    optional int32    OpType     = 2;		//操作类型	
    optional int32    Card       = 3;			//打出的牌	
	repeated tagGangInfo Gang	=4;
	optional tagBuZhang bu = 5;
}

message tagHuInfo
{
	required int32 Card = 1;			//听的牌
	optional int32 LeftNum = 2;			//剩余张数
	optional int32 HuFanNum = 3;		//胡牌番数
};

message tagDaShaiPaiCount
{
    optional int32 shaiSum = 1;             //打出的实际点数（需要从后跳过的牌堆数）
    optional int32 paiCount = 2;            //打中的牌张数
}

message tagGang_Zhuapai
{//广播抓牌	
	required int32 Chairid = 1;		//杠牌玩家
	repeated int32 Card = 2;		//杠牌
	repeated GangAckOpNotify OpNotify=3; //没有操作为空
	optional int32 LeftCardNum = 4;	//牌池剩余牌数
	repeated tagHuInfo HuInfo = 5;		//胡牌信息	
	optional int32 fz_type = 6;
	optional tagDaShaiPaiCount shaiPaiCount = 7;
	optional int32 LeftCardNum2 = 8;
	optional int32 LeftCardNum3 = 9;
}

message tagBuinfo
{//补拍的信息
	required int32 Card = 1;			//要杠的牌
	optional int32 state = 2;		    //杠类型	
}
message tagBuZhang
{
	repeated tagBuinfo bu = 1;
}
message tagUserState
{
	required int32 ChairID = 1;			//玩家状态
	required int32 State = 2;			//玩家状态
	repeated int32 Score = 3;
}
message tagExternalMsg
{
	optional int32 cmd = 1;
	optional tagUserState type = 2;	
}
//定制麻将配置信息
message AckCustomiedInfo
{	
	required int32 gametype = 1;			//湖南地区，参照 HunanLocation
	required int32 isHavePiao = 2;			//是否有飘
	required int32 Jiangma = 3;				//是否奖码抓鸟， 0 表示没有奖码， 1 表示抓鸟，2 表示 159 奖码，3 表示摸几奖几
	required int32 Laizi = 4;				//是否万能红中  0 表示没有癞子， 红中表示癞子
	optional int32 piaoTime = 5;			//选择飘的时间
	repeated int32 UserPiao = 6;			//各个玩家选择的飘
	optional int32 IsPiaoyet = 7;			//是否已经选择飘	
	repeated int32 JinZhiHuanPai = 8;		//听牌后禁止换牌
	optional tagBuZhang bu = 9;	
	repeated int32 RoomConfigID = 10;		//房间ID
	optional tagBanPai banpai = 11;			//玩家板牌信息	
	optional tagGang_Zhuapai zhuapai = 12;	//玩家杠后操作
	optional AckEnSureJoker Joker = 13;		//
	optional bool GangCalcImm = 14;			//杠分即时结算
	optional int32 OpType2 = 15;
	optional int32 CurOutCardSeat = 16;		//当前出牌玩家
	optional int32 lianZhuangCount = 17; //连庄数
	optional int32 fz_type = 18;
	optional int32 hu_type = 19;
	optional tagExternalMsg msg = 20;	//特殊状态
	repeated tagDaShaiPaiCount shaiPaiCounts = 21;
}
 
//2 结算，胡牌、杠牌信息宏定义，不需要，按之前的就可以；

//麻将结算显示内容
message tagHuNanGameEnd
{	
	repeated FanInfo    faninfo = 1;		//番数信息,4个玩家
	repeated int32      piaoNum = 2;		//飘信息
	optional tagJiangma Niao = 3;			//中鸟	
	repeated tagMultiHuInfo huinfo = 4;		//胡牌，胡两张的情况下才会有	
	optional int32		LeftCardNum = 5;	//剩余牌数
	repeated int32	ContinuousBankerNum = 6;	//连庄次数
	repeated int32 RemainderCards = 7;		//所有剩余牌
}
message tagMultiHuInfo
{
	required int32 Chairid = 1;
	repeated int32 HuCard = 2;
}
//另加番信息
message AddFanInfo
{
    optional int32 AddType = 1;          //另加分类型(1只吃 2门清 3有眼 4箭牌刻 5 翻花对位 6风牌刻)
	optional int32 AddNum = 2;           //分数
	optional int32 FenNum = 3;           //分数
}

//番数信息
message FanInfo
{
    required int32 chairID = 1;				//椅子ID  		
	required int32 SpecialType = 2;			//详细结算胡牌类型 1表示自摸，2表示点炮胡，3表示放炮,4 被自摸    
	required int32 FanNum = 3;				//番数		
	repeated AddFanInfo addfan = 4;   	    //另加番信息， 5天和 6地和 7抢杠胡 8杠上开花 9花上添花		
}
message tagBuZhangOpResult
{
	required int32 BuzhangOpType = 1;		//补张的操作  
}

message ReordInfo
{
    optional int32 banker_num = 1;       		//坐庄次数
	optional int32 hu_num = 2;         			//胡牌次数
	optional int32 piaolaizi_num = 3;        	//飘癞子次数
	optional int32 outtime_num = 4;         	//超时次数
	optional int32 totalscore = 5;         		//总分
	optional int32 WinCounts = 6;				//赢次数
	optional int32 GangTimes = 7;				//杠次数
	optional int32 DianGangTimes = 8;			//点杠次数
	optional int32 Ex1 = 9;						//额外加数据，客户端说只能这么加
	optional int32 Ex2 = 10;
	optional int32 zimo_num = 11;				//自摸次数
	optional int32 jiepao_num = 12;				//接炮次数
	optional int32 dianpao_num = 13;			//点炮次数
	optional int32 minggang_num = 14;			//明杠次数
	optional int32 angang_num = 15;				//暗杠次数
}

//总结算统计信息
message GameEndRecord
{
    repeated ReordInfo  UserRecoreInfo = 1;      //统计信息
	repeated int32  MostDianPaoUser = 2;         //炮手
	repeated int32  MostWinScoreUser = 3;        //大赢家玩家 
	optional int32 DataTime = 4;                 //当前时间
	repeated int32 uid =5;
	repeated string name = 6;
	repeated string avatar = 7;
}

message RoundScore
{
	repeated int32 Score = 1;
}
message TotalRoundScore
{
	repeated RoundScore round = 1;				//每局分
	optional int32 roundcount = 2;				//局数
}
